# alvinmunk

./: .env.example  .gitignore  .npmrc  README.md  package.json  pnpm-lock.yaml  turbo.json
contracts/: Cargo.toml  Makefile  rust-toolchain.toml
contracts/gate/: Cargo.toml
contracts/gate/src/: lib.rs  test.rs
contracts/quest_registry/: Cargo.toml
contracts/quest_registry/src/: lib.rs  test.rs
contracts/quest_registry/test_snapshots/test/: award_inactive_quest_reverts.1.json  award_quest_cross_calls_reputation_and_credits_earned.1.json  award_quest_non_allowlisted_attester_reverts.1.json  award_quest_replay_reverts.1.json  award_unknown_quest_reverts.1.json  same_week_completions_do_not_double_count_streak.1.json  weekly_streak_increments_then_resets_on_a_gap.1.json
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs  test.rs
contracts/reputation/: Cargo.toml
contracts/reputation/src/: lib.rs  test.rs
contracts/reputation/test_snapshots/test/: attester_award_credits_earned_only.1.json  attester_award_writes_attestation.1.json  claim_with_wrong_secret_reverts.1.json  daily_cap_reverts_on_overuse.1.json  double_claim_reverts.1.json  non_allowlisted_attester_reverts.1.json  repeated_pair_grants_no_more_social_xp.1.json  self_vouch_reverts.1.json  vouch_claim_secret_grants_asymmetric_social_xp.1.json  vouch_grants_social_xp_to_both_on_claim.1.json
contracts/rewards/: Cargo.toml
contracts/rewards/src/: lib.rs  test.rs
contracts/rewards/test_snapshots/test/: claim_below_threshold_reverts.1.json  claim_inactive_reward_reverts.1.json  (+10 more)
(+158 files in other folders)
