[workspace]
resolver = "2"
members = ["reputation", "quest_registry", "rewards", "registry", "gate"]

[workspace.dependencies]
# NOTE: verify the latest soroban-sdk before first build (`cargo search soroban-sdk`).
soroban-sdk = "22.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
